# seal

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Deep_neural_nw.cpp  Discrete_neural_nw.cpp  Makefile  Performance_test.cpp  README.md  Sigmoid.cpp  Sign_algo1.cpp  Sign_algo2.cpp  ciphertext.ipynb  deep_nw  dnn.csv  neural_nw.h  performance_test.h  plaintext.ipynb  public_key.ipynb  rotate.cpp  secret_key.ipynb  security_128.ipynb  security_192.ipynb  security_256.ipynb  sigmoid.h  sign_function.h  test  test1  test2.cpp
SEAL-master/: CMakeCache.txt  Makefile  cmake_install.cmake  seal-3.5.pc
SEAL-master/cmake/: SEALConfig.cmake  SEALConfigVersion.cmake  SEALTargets.cmake
SEAL-master/dotnet/nuget/: SEALNet-multi.nuspec  SEALNet.nuspec
SEAL-master/native/HE_functions/: CMakeLists.txt  Source1.cpp  obj  rotate.cpp
SEAL-master/native/examples/: 7_performance.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  examples.cpp  examples.h  test_7.cpp
SEAL-master/native/src/seal/: CMakeLists.txt  Makefile  ciphertext.cpp  cmake_install.cmake  evaluator.cpp  intarray.h
SEAL-master/native/src/seal/util/: Makefile  cmake_install.cmake  config.h
SEAL-master/native/tests/seal/: Makefile  cmake_install.cmake
SEAL-master/native/tests/seal/util/: Makefile  cmake_install.cmake
